Fixed layout on mobile and other improvements

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,8 @@
 
 .App-intro {
   font-size: large;
-  width: 480px;
+  width: 100%;
+  max-width: 480px;
   margin: auto;
   text-align: left;
 }
